Make sure the product card doesn't collapse horizontally

--- a/_inc/client/plans/single-product-backup.scss
+++ b/_inc/client/plans/single-product-backup.scss
@@ -106,6 +106,7 @@ input[type='radio'].plan-radio-button__input {
 // Accented card
 .single-product-backup__accented-card {
 	max-width: 518px;
+	width: 100%;
 	font-size: 14px;
 }
 
